--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ dBurl = 'mongodb+srv://praveen:praveen123@cluster0.6tyr1.mongodb.net/FoodWebsite
 dBurlLocal = 'mongodb://localhost:27017/wt'
 PASS_KEY = 'paari'
 JWT_KEY = 'parri'
-port = 5000
+PORT = 5000
 hostname = '127.0.0.1'
