axios urls are modified to default in front end AJAX requests

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ dBurlLocal = 'mongodb://localhost:27017/wt'
 PASS_KEY = 'paari'
 JWT_KEY = 'parri'
 PORT = 5000
-hostname = '127.0.0.1'
+Hostname = '127.0.0.1'
